--- a/config.yaml
+++ b/config.yaml
@@ -27,7 +27,7 @@ params:
     - client-and-work
     - experience
     - education
-#    - publication
+    - testimonial
     - contact
     - newsletter
 menu:
