--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -17,7 +17,7 @@ showcase:
   button:
     icon: "icon-mail-fill"
     btnText: "Contact Sean"
-    URL: "mailto:seanjtrainor@gmail.com"
+    URL: "mailto:senjtrainor@gmail.com"
 
   socialLinks:
     - icon: "linkedin"
@@ -26,7 +26,7 @@ showcase:
     - icon: "github"
       URL: "https://github.com/seanjtrainor"
 
- 
+
 
 # about
 about:
@@ -34,7 +34,7 @@ about:
   title: "Who am I?"
   content: 
     <p class="lead">
-    <strong>I am an aspiring data scientist.</strong> My passion is training. But, when I am not making new courses
+    <strong>I love helping data scientists.</strong> My passion is training. But, when I am not making new courses
     or building software, I enjoy vacationing with my family and friends. 
     </p>
     <p class="lead">
@@ -46,10 +46,10 @@ about:
   button:
     icon: "icon-smile-fill"
     btnText: "About Me"
-    URL: "https://www.linkedin.com/in/sean-trainor-2394b2126/"
+    URL: "https://www.linkedin.com"
   image:
-    x: "~/Desktop/portfolio/headshot.png"
-    _2x: "~/Desktop/portfolio/headshot.png"
+    x: "img/who-am-i/user-picture-2.jpg"
+    _2x: "img/who-am-i/user-picture-2.jpg"
 
 # experience
 experience:
@@ -63,7 +63,7 @@ experience:
   button2:
     icon: "icon-profile-fill"
     btnText: "Download My Resume"
-    URL: "/Sean_Trainor-Data_Scientist-resume.pdf"
+    URL: "/cv/Sean_Trainor-Data_Scientist-resume.pdf"
 
   items:
     - title: "Risk Adjustment Data Analyst"
@@ -73,6 +73,7 @@ experience:
     - title: "Data Analyst"
       company: "Evolent Health"
       duration: "Jun 2019 - Jun 2021"
+
 
 # education
 education:
@@ -86,7 +87,7 @@ education:
     - university: "Rockhurst University"
       year: "2012-2016"
       degree: "Bachelor of Science, Biochemistry"
-      
+
 
 
 
@@ -139,53 +140,46 @@ client_and_work:
         _2x: "img/works/app_sales_demand_forecast.jpg"
       is_even: true
 
-# Publication
-  # publication:
-  #   enable: true
-  #   title: "Publications"
-  #   items:
-  #     - title: "The Relationship between Polypharmacy and Physical Activity in Those with Knee Osteoarthritis"
-  #       year: "2019"
-  #       journal: "Journal of the American Geriatric Society"
+
     
 
 # testimonial
-# testimonial:
-#   enable: false
-#   title: "Publications"
-#   items:
-#   
-#     - name: "Justin Kurland, PhD"
-#       position: "Lead Data Scientist, Northwestern Mutual"
-#       content: "In less than 6 months after starting my first Business Science Course with Matt I had fully transitioned into a role as a lead data scientist and my life is better for it!"
-#       image:
-#         x: "img/testimonials/justin.jpg"
-#         _2x: "img/testimonials/justin.jpg"
+testimonial:
+  enable: false
+  title: "Testimonials"
+  items:
+  
+    - name: "Justin Kurland, PhD"
+      position: "Lead Data Scientist, Northwestern Mutual"
+      content: "In less than 6 months after starting my first Business Science Course with Matt I had fully transitioned into a role as a lead data scientist and my life is better for it!"
+      image:
+        x: "img/testimonials/justin.jpg"
+        _2x: "img/testimonials/justin.jpg"
         
-    # - name: "Chris Selig"
-    #   position: "Data Scientist"
-    #   content: "Because of all the R courses Matt Dancho has provided, I landed my first Data Scientist role. Setting up shiny dashboards in AWS was extremely helpful during my interview."
-    #   image:
-    #     x: "img/testimonials/chris.jpg"
-    #     _2x: "img/testimonials/chris.jpg"
-    # 
-    # 
-    # 
-    # - name: "Mohana Krishna Chittoor"
-    #   position: "Lead Data Scientist, Money View"
-    #   content: "After your entry into my life, I got a 10% pay raise and then after another 6-months of 26%, and in just another 2-months a 40% hike. I can grab a job wherever I want."
-    #   image:
-    #     x: "img/testimonials/mohana.jpg"
-    #     _2x: "img/testimonials/mohana.jpg"
+    - name: "Chris Selig"
+      position: "Data Scientist"
+      content: "Because of all the R courses Matt Dancho has provided, I landed my first Data Scientist role. Setting up shiny dashboards in AWS was extremely helpful during my interview."
+      image:
+        x: "img/testimonials/chris.jpg"
+        _2x: "img/testimonials/chris.jpg"
+
+    
+
+    - name: "Mohana Krishna Chittoor"
+      position: "Lead Data Scientist, Money View"
+      content: "After your entry into my life, I got a 10% pay raise and then after another 6-months of 26%, and in just another 2-months a 40% hike. I can grab a job wherever I want."
+      image:
+        x: "img/testimonials/mohana.jpg"
+        _2x: "img/testimonials/mohana.jpg"
 
 # contact
 contact:
   enable: true
   title: "Contact Sean"
     
-   image:
-    x: "img/who-am-i/user-picture-2.jpg"
-    _2x: "img/who-am-i/user-picture-2.jpg"
+  image:
+    x: "img/headshot.png"
+    _2x: "img/headshot.png"
     
   button:
     icon: "icon-mail-fill"
@@ -194,13 +188,13 @@ contact:
     
   phone:
     title: "Phone Number"
-    number: "--"
+    number: "708-465-8744"
   email:
     title: "Email"
     email: '<a href="mailto:seanjtrainor@gmail.com">seanjtrainor@gmail.com</a>'
   address:
     title: "Address"
-    address: "--"
+    address: "4307 Mayberry St. Omaha, NE"
   
 
 # newsletter
